--- a/logstash/1000_nessus_process_file.conf
+++ b/logstash/1000_nessus_process_file.conf
@@ -44,18 +44,23 @@ filter {
 
     if [risk] == "None" {
       mutate { add_field => { "risk_number" => 0 }}
+      mutate { replace => { "risk" => "info" }}
     }
     if [risk] == "Low" {
       mutate { add_field => { "risk_number" => 1 }}
+      mutate { replace => { "risk" => "low" }}
     }
     if [risk] == "Medium" {
       mutate { add_field => { "risk_number" => 2 }}
+      mutate { replace => { "risk" => "medium" }}
     }
     if [risk] == "High" {
       mutate { add_field => { "risk_number" => 3 }}
+      mutate { replace => { "risk" => "high" }}
     }
     if [risk] == "Critical" {
       mutate { add_field => { "risk_number" => 4 }}
+      mutate { replace => { "risk" => "critical" }}
     }
     
     if [cve] == "nan" {
